--- a/discord-bot/.env.example
+++ b/discord-bot/.env.example
@@ -1,27 +1,27 @@
 # Discord Bot Configuration
-DISCORD_BOT_TOKEN=your_bot_token_here
-DISCORD_CLIENT_ID=your_client_id_here
-DISCORD_GUILD_ID=your_server_id_here
+DISCORD_BOT_TOKEN=your_discord_bot_token_here
+DISCORD_CLIENT_ID=your_discord_client_id_here
+DISCORD_GUILD_ID=your_discord_guild_id_here
 
 # Discord Bot Settings
 DISCORD_BOT_PREFIX=!shaad
 DISCORD_OWNER_ID=your_discord_user_id_here
 
 # Discord Channels (will auto-discover or use first available)
-DISCORD_CHANNEL_GENERAL=general
+DISCORD_CHANNEL_GENERAL=bot-talk
 DISCORD_CHANNEL_CODE_UPDATES=code-updates
 DISCORD_CHANNEL_SYSTEM_ALERTS=system-alerts
 DISCORD_CHANNEL_GIT_COMMITS=git-commits
 DISCORD_CHANNEL_FILE_CHANGES=file-changes
 DISCORD_CHANNEL_TODO_LIST=todo-list
 
-# SHAAD API Integration (future use)
-SHAAD_API_URL=http://localhost:3001/api
-SHAAD_BOT_USERNAME=discord-bot
-SHAAD_BOT_PASSWORD=secure_password_here
+# SHAAD API Integration
+SHAAD_API_URL=https://myshaad.com/api
+SHAAD_BOT_USERNAME=your_shaad_bot_username
+SHAAD_BOT_PASSWORD=your_shaad_bot_password
 
 # Code Monitoring Settings
-PROJECT_PATH=/path/to/your/project
+PROJECT_PATH=/home/shaad/ai-assistant-dashboard
 GIT_POLLING_INTERVAL=30000
 MAX_FILE_SIZE=1048576
 
@@ -31,12 +31,12 @@ MEMORY_ALERT_THRESHOLD=85
 CPU_ALERT_THRESHOLD=80
 DISK_ALERT_THRESHOLD=90
 
-# Webhook Service (future use)
+# Webhook Service
 WEBHOOK_PORT=3003
-WEBHOOK_SECRET=your_webhook_secret_here
+WEBHOOK_SECRET=your_webhook_secret_for_github
 
 # Logging
-LOG_LEVEL=info
+LOG_LEVEL=debug
 LOG_DIR=./logs
 NODE_ENV=development
 
